syntax = "proto3";

package diploma;

option go_package = "auth/proto";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string error = 1; // ошибка
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string error = 1; // ошибка
}

message LogoutRequest {
}

message LogoutResponse {
  string error = 1; // ошибка
}

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}